# pystclient

./: .buildinfo  .coveragerc  .gitignore  .sourcery.yaml  CHANGELOG.html  CHANGELOG.md  CITATION.cff  LICENSE.html  README.html  README.md  STYLEGUIDE.html  STYLEGUIDE.md  THIRD_PARTY_LICENSES  api.html  cli.html  genindex.html  index.html  names.csv  py-modindex.html  pyproject.toml  pytest.ini  ruff.toml  search.html  searchindex.js
.github/workflows/: _merge_into_release.yml  _test.yml  _test_future.yml  publish_release.yml
_autosummary/: pystclient.api.PyStclientProcess.html  pystclient.clients.BaseClient.html  pystclient.clients.HandleAuthentication.html  pystclient.clients.SimulatorClient.html  pystclient.clients.html  pystclient.models.BaseProject.html  pystclient.models.FmuSelect.html  pystclient.models.FmuVariableGroup.html  pystclient.models.LoggingConfiguration.html  pystclient.models.MeasurementQuery.html  pystclient.models.MeasurementVariables.html  pystclient.models.Measurements.html  pystclient.models.ModelVariable.html  pystclient.models.ProjectInformation.html  pystclient.models.QueryResult.html  pystclient.models.QueryVariable.html  pystclient.models.Simulation.html  pystclient.models.SimulationConfig.html  pystclient.models.SimulationInfo.html  pystclient.models.html  pystclient.resources.html  pystclient.types.TimeUnit.html  pystclient.types.html  pystclient.utils.html  pystclient.utils.logging.html
_sources/: api.rst.txt  index.rst.txt
_sources/_autosummary/: pystclient.api.PyStclientProcess.rst.txt  pystclient.clients.BaseClient.rst.txt  pystclient.clients.PyStclient.rst.txt  pystclient.clients.SimulatorClient.rst.txt  pystclient.models.BaseProject.rst.txt  pystclient.models.FmuNode.rst.txt  pystclient.models.FmuNodeEdge.rst.txt  pystclient.models.FmuSelect.rst.txt  pystclient.models.FmuVariable.rst.txt  pystclient.models.FmuVariableGroup.rst.txt  pystclient.models.MeasurementMetadata.rst.txt  pystclient.models.MeasurementQuery.rst.txt  pystclient.models.Measurements.rst.txt  pystclient.models.ModelParameters.rst.txt  pystclient.models.QueryVariable.rst.txt  pystclient.models.Simulation.rst.txt  pystclient.models.SimulationConfig.rst.txt  pystclient.models.SimulationInfo.rst.txt  pystclient.models.SimulationParameters.rst.txt  pystclient.resources.rst.txt  pystclient.settings.rst.txt  pystclient.types.FmuCausalityType.rst.txt  pystclient.types.FmuVariableTypeEnum.rst.txt  pystclient.types.TimeUnit.rst.txt  pystclient.types.rst.txt  pystclient.utils.helpers.rst.txt  pystclient.utils.logging.rst.txt
branch/main/: README.html  cli.__main__.html  index.html  objects.inv  pystclient.html  searchindex.js
branch/main/_autosummary/: pystclient.api.html  pystclient.clients.MeasurementClient.html  pystclient.clients.ModelClient.html  pystclient.clients.ProjectClient.html  pystclient.clients.PyStclient.html  pystclient.clients.SimulationResults.html  pystclient.exception.html  pystclient.models.FmuConnections.html  pystclient.models.FmuModelInformation.html  pystclient.models.FmuNode.html  pystclient.models.FmuNodeEdge.html  pystclient.models.FmuVariable.html  pystclient.models.FmuVariables.html  pystclient.models.MeasurementInstance.html  pystclient.models.MeasurementMetadata.html  pystclient.models.MeasurementVariables.html  pystclient.models.ModelParameters.html  pystclient.models.QueryVariable.html  pystclient.models.SimulationParameters.html  pystclient.models.SimulatorStatus.html  pystclient.models.UploadedModelInfo.html  pystclient.models.html  pystclient.settings.html  pystclient.types.FmuCausalityType.html  pystclient.types.FmuVariableTypeEnum.html  pystclient.types.SimulationType.html  pystclient.utils.helpers.html  pystclient.utils.time.html
branch/main/_sources/: pystclient.rst.txt
branch/main/_sources/_autosummary/: pystclient.api.rst.txt  pystclient.clients.HandleAuthentication.rst.txt  pystclient.clients.MeasurementClient.rst.txt  pystclient.clients.ModelClient.rst.txt  pystclient.clients.ProjectClient.rst.txt  pystclient.clients.SimulationResults.rst.txt  pystclient.clients.rst.txt  pystclient.exception.rst.txt  pystclient.models.FmuConnections.rst.txt  pystclient.models.FmuModelInformation.rst.txt  pystclient.models.FmuVariables.rst.txt  pystclient.models.LoggingConfiguration.rst.txt  pystclient.models.MeasurementInstance.rst.txt  pystclient.models.MeasurementVariables.rst.txt  pystclient.models.ModelVariable.rst.txt  pystclient.models.ProjectInformation.rst.txt  (+7 more)
docs/source/: cli.__main__.rst  conf.py
examples/: create_batch_simulation.ipynb  create_simulation.ipynb
src/pystclient/: __about__.py  __init__.py  api.py  clients.py  exception.py  models.py  settings.py  types.py
src/pystclient/cli/: __init__.py  __main__.py
src/pystclient/resources/: __init__.py  authenticated.html
src/pystclient/utils/: __init__.py  helpers.py  logging.py  time.py
tests/: conftest.py  test_api.py
tests/cli/: test_pystclient_cli.py
tests/fmus/: ErrorAtInit.fmu
tests/stc/: conftest.py  test_authentication.py  test_project.py  test_simulation.py
tests/test_working_directory/: test_config_file.json
